fix: 补充 overflow 样式

--- a/51-75/57/index.css
+++ b/51-75/57/index.css
@@ -9,6 +9,7 @@
   border-radius: 5px;
   box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.1);
   background-color: #2b3d4e;
+  overflow: hidden;
 }
 
 .center {
